Closed
Bug 869517
Opened 12 years ago
Closed 12 years ago
Fix JSFlatString RootKind compilation error when building with --enable-root-analysis
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
Attachments
(1 file)
|
1.50 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
When I build with --enable-root-analysis on OSX, I get the following compilation error because RootKind<JSFlatString *> is undefined:
../../dist/include/js/RootingAPI.h:382:46: error: incomplete type 'JSFlatString' named in nested name specifier
static ThingRootKind rootKind() { return T::rootKind(); }
^~~
../../dist/include/js/RootingAPI.h:389:57: note: in instantiation of member function 'js::RootKind<JSFlatString *>::rootKind' requested here
static ThingRootKind kind() { return RootKind<T *>::rootKind(); }
^
../../dist/include/js/RootingAPI.h:490:54: note: in instantiation of member function 'js::RootMethods<JSFlatString *>::kind' requested here
js::ThingRootKind kind = js::RootMethods<T>::kind();
^
../../dist/include/js/RootingAPI.h:411:9: note: in instantiation of member function 'JS::Rooted<JSFlatString *>::commonInit' requested here
commonInit(cx->thingGCRooters);
^
../../dist/include/js/RootingAPI.h:428:9: note: in instantiation of member function 'JS::Rooted<JSFlatString *>::init' requested here
init(cx);
^
/Users/chris/Code/mozilla/central/dom/base/nsJSTimeoutHandler.cpp:188:29: note: in instantiation of member function 'JS::Rooted<JSFlatString *>::Rooted' requested here
JS::Rooted<JSFlatString*> expr(cx);
^
../../dist/include/jspubtd.h:186:45: note: forward declaration of 'JSFlatString'
class JSFlatString;
^
1 error generated.
Attachment #746471 -
Flags: review?(wmccloskey)
Attachment #746471 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Comment 1•12 years ago
|
||
status-firefox22:
--- → wontfix
status-firefox23:
--- → fixed
Comment 2•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•