Bug 869517 - Fix JSFlatString RootKind compilation error when building with --enable-root-analysis. r=billm